# memprobe

./: .gitignore  README.md  pyproject.toml
examples/mvp/: episode.json  events.json
ideas/: main.md  open_source_vlm_generation_pipeline.md  probe_question_catalog.md
scripts/: download_droid.sh  download_robomemarena_transfer.py  download_vlm_models.sh  eval_qwen_vl_mcq.py  generate_robomemarena_qa.py  hdf5_to_video.py  make_qa_video_smoke.py  rewrite_qa_with_qwen.py  smoke.sh  smoke_transfer.sh  smoke_v1.sh
src/memprobe/: __init__.py  adapters.py  backends.py  cli.py  graph.py  hdf5_utils.py  materialize.py  pipeline.py  probes.py  robomemarena.py  sampling.py  schema.py  storage.py  validation.py  windows.py
tests/: test_backends.py  test_materialize.py  test_pipeline.py  test_sampling.py  test_windows.py
