[project]
name = "memprobe"
version = "0.1.0"
description = "Prototype MemProbe QA generation and VLM evaluation utilities."
requires-python = ">=3.9"
dependencies = [
  "h5py>=3.8",
  "numpy>=1.23",
]

[project.optional-dependencies]
qwen = [
  "accelerate",
  "pillow",
  "qwen-vl-utils",
  "torch",
  "transformers>=4.49.0",
]

[tool.setuptools.packages.find]
where = ["src"]
