[project]
name = "memprobe"
version = "0.1.0"
description = "Dataset-independent visual episodic memory probe generation."
requires-python = ">=3.9"
dependencies = [
  "imageio-ffmpeg>=0.5",
  "numpy>=1.23",
]

[project.scripts]
memprobe = "memprobe.cli:main"

[project.optional-dependencies]
qwen = [
  "accelerate",
  "pillow",
  "qwen-vl-utils>=0.0.14",
  "torch",
  "transformers>=4.57.1",
]

dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]
